--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "mathjs": "^13.2.0",
     "ngx-csv": "^0.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
